package neh.memocards.domain.estudio;

import java.util.Set;

public class TematicaEstudio {
    // Atributos
    private Long id;
    private String nombre;
    private String descripcion;
    private Set<Mazo> mazos;

    // Métodos (por implementar según necesidades)
}