package neh.memocards.domain.estudio.memocard.estados;


public class Aprendizaje extends EstadoMemoCard {
    // Atributos
    private Long umbralIntevaloMax;
    private Integer cantidadDeAciertos;

    // Métodos
    @Override
    public void calcularIntervalo(Integer intervalo, Integer dificultad) {
        // Implementación pendiente
    }

    @Override
    public void actualizarEstado(EstadoMemoCard nuevoEstado) {
        // Implementación pendiente
    }
}
