package neh.memocards.domain.estudio.memocard.estados;

public class Reaprendizaje extends EstadoMemoCard {
    // Atributos
    private Long umbralIntevaloMax;
    private Integer cantidadDeAciertos;

    // Métodos
    @Override
    public void calcularIntervalo(Integer intervalo, Integer dificultad) {
        // Implementación pendiente
    }

    @Override
    public void actualizarEstado(EstadoMemoCard nuevoEstado) {
        // Implementación pendiente
    }
}
