package neh.memocards.domain.estudio.memocard.estados;

public class Repaso extends EstadoMemoCard {
    // Atributos
    private Float coeficienteDeRetencion;

    // Métodos
    @Override
    public void calcularIntervalo(Integer intervalo, Integer dificultad) {
        // Implementación pendiente
    }

    @Override
    public void actualizarEstado(EstadoMemoCard nuevoEstado) {
        // Implementación pendiente
    }
}
